added working directory for npm install

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -21,6 +21,8 @@ jobs:
 
       - name: Install Dependencies
         run: npm install
+        working-directory: DummyUI
 
       - name: Build Angular App
         run: ng build --configuration production
+        working-directory: DummyUI
