--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -14,14 +14,17 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
         
-      - name: Use Node.js 18
+      - name: Use Node.js
         uses: actions/setup-node@v3 
         with:
-          node-version: 18
+          node-version: '20'
 
       - name: Install Dependencies
         run: npm install
         working-directory: DummyUI
+
+      - name: Install Angular CLI
+        run : npm install -g @angular/cli
 
       - name: Build Angular App
         run: ng build --configuration production
