updated the variables in frontend.yml

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -27,7 +27,7 @@ jobs:
         run : npm install -g @angular/cli
 
       - name: Replace API URL in environment.prod.ts
-        run: sed -i "s|REPLACE_ME_BASE_API_URL |${{secrets.API_URL}}|g" ./src/environments/environment.prod.ts
+        run: sed -i "s|REPLACE_ME_BASE_API_URL |${{secrets.api_url}}|g" ./src/environments/environment.prod.ts
         working-directory: DummyUI
 
       - name: Build Angular App
@@ -37,25 +37,25 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
-          AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-          AWS_REGION: ${{secrets.AWS_REGION}}
+          aws_access_key_id: ${{secrets.aws_access_key_id}}
+          aws_secret_access_key: ${{secrets.aws_secret_access_key}}
+          aws_region: ${{secrets.aws_region}}
 
       - name: Sync to S3
-        run: aws s3 sync ./dist/dummy-ui/browser s3://$AWS_S3_BUCKET --delete
+        run: aws s3 sync ./dist/dummy-ui/browser s3://${{secrets.s3_bucket_name}} --delete
         env:
-          S3_BUCKET_NAME: ${{secrets.S3_BUCKET_NAME}}
-          AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
-          AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-          AWS_REGION: ${{secrets.AWS_REGION}}
-          SOURCE_DIR: dist/dummy-ui/browser 
+          s3_bucket_name: ${{secrets.s3_bucket_name}}
+          aws_access_key_id: ${{secrets.aws_access_key_id}}
+          aws_secret_access_key: ${{secrets.aws_secret_access_key}}
+          aws_region: ${{secrets.aws_region}}
+          source_dir: dist/dummy-ui/browser 
 
       - name: Invalidate CloudFront Cache
         uses: chetan/invalidate-cloudfront-action@v2
         with:
-          CLOUD_DISTRIBUTION_ID: ${{secrets.CLOUD_DISTRIBUTION_ID}}
+          cloud_distribution_id: ${{secrets.cloud_distribution_id}}
           paths: "/*"
         env:
-          AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
-          AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-          AWS_REGION: ${{secrets.AWS_REGION}}
+          aws_access_key_id: ${{secrets.aws_access_key_id}}
+          aws_secret_access_key: ${{secrets.aws_secret_access_key}}
+          aws_region: ${{secrets.aws_region}}
