--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -52,10 +52,9 @@ jobs:
 
       - name: Invalidate CloudFront Cache
         uses: chetan/invalidate-cloudfront-action@v2
-        with:
-          distribution-id: ${{secrets.cloud_distribution_id}}
-          paths: "/*"
         env:
+          distribution: ${{secrets.cloud_distribution_id}}
+          paths: "/*"
           aws-access-key-id: ${{secrets.aws_access_key_id}}
           aws-secret-access-key: ${{secrets.aws_secret_access_key}}
           aws-region: ${{secrets.aws_region}}
