added destroy-remote-backend.yml and updated frontend.yml to trigger manually on workflow_dispatch

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,8 +1,10 @@
 name : Angular CI Pipeline
 on:
-  push:
-    branches:
-      - "main"
+  workflow_dispatch:
+    
+#  push:
+#    branches:
+#      - "main"
 jobs:
   build:
     name: Build Angular App
