updated the destroy command in remote-backend.yml

--- a/.github/workflows/destroy-remote-backend.yml
+++ b/.github/workflows/destroy-remote-backend.yml
@@ -34,7 +34,8 @@ jobs:
         run: terraform import aws_dynamodb_table.tf_lock_table tfstate-lock-table
 
       - name: Terraform Destroy
-        run: terraform destroy -target=aws_s3_bucket.tf_state_bucket
+        run: terraform destroy
+        #run: terraform destroy -target=aws_s3_bucket.tf_state_bucket -auto-approve
 
-      - name: Terraform Destroy
-        run: terraform destroy -target=aws_dynamodb_table.tf_lock_table
+      #- name: Terraform Destroy
+       # run: terraform destroy -target=aws_dynamodb_table.tf_lock_table -auto-approve
