--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -65,19 +65,19 @@ jobs:
           GH_TOKEN: ${{secrets.GH_TOKEN}}
         run: |
           echo "=======Exporting Terraform Outputs as GitHub Secrets======="
-          cloud-front-id=$(terraform output -raw angular_cloudfront_distribution_id)
-          api-url=$(terraform output -raw angular_base_api_url)
-          s3-bucket-name=$(terraform output -raw s3_bucket_name)
-          cicd-access-key-id=$(terraform output -raw cicd_user_access_key_id)
-          cicd-secret-access-key=$(terraform output -raw cicd_user_secret_access_key)
-          aws-region=$(terraform output -raw project_region)
+          cloud_front_id=$(terraform output -raw angular_cloudfront_distribution_id)
+          api_url=$(terraform output -raw angular_base_api_url)
+          s3_bucket_name=$(terraform output -raw s3_bucket_name)
+          cicd_access_key_id=$(terraform output -raw cicd_user_access_key_id)
+          cicd_secret_access_key=$(terraform output -raw cicd_user_secret_access_key)
+          aws_region=$(terraform output -raw project_region)
 
-          gh secret set CLOUD_DISTRIBUTION_ID -b "$cloud-front-id"
-          gh secret set API_URL -b "$api-url"
-          gh secret set S3_BUCKET_NAME -b "$s3-bucket-name"
-          gh secret set AWS_REGION -b "$aws-region"
-          gh secret set AWS_ACCESS_KEY_ID -b "$cicd-access-key-id"
-          gh secret set AWS_SECRET_ACCESS_KEY -b "$cicd-secret-access-key"
+          gh secret set CLOUD_DISTRIBUTION_ID -b "$cloud_front_id"
+          gh secret set API_URL -b "$api_url"
+          gh secret set S3_BUCKET_NAME -b "$s3_bucket_name"
+          gh secret set AWS_REGION -b "$aws_region"
+          gh secret set AWS_ACCESS_KEY_ID -b "$cicd_access_key_id"
+          gh secret set AWS_SECRET_ACCESS_KEY -b "$cicd_secret_access_key"
 
           echo "======== GitHub Secrets updated successfully================"
 
