--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -55,5 +55,5 @@ jobs:
       - name: Invalidate CloudFront Cache
         run: |
           aws cloudfront create-invalidation\
-          --distribution-id ${{secrets.cloud_distribution_id}}
+          --distribution-tenant ${{secrets.cloud_distribution_id}}
           --paths "/*"
