updated frontend.yml cloudfront invalidate cache

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -54,6 +54,6 @@ jobs:
 
       - name: Invalidate CloudFront Cache
         run: |
-          aws cloudfront create-invalidation\
+          aws cloudfront create-invalidation-for\
           --distribution-tenant ${{secrets.cloud_distribution_id}}
           --paths "/*"
