updated the cloudfront invalidate cache with distribution id and Invalidate Batch values in frontend.yml

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -52,8 +52,14 @@ jobs:
         #  aws-region: ${{secrets.aws_region}}
         #  source-dir: dist/dummy-ui/browser 
 
-      - name: Invalidate CloudFront Cache
+      - name: Invalidate CloudFront Cache (Via AWS CLI)
         run: |
-          aws cloudfront create-invalidation-for\
-          -distribution-tenant ${{secrets.cloud_distribution_id}}
-          --paths "/*"
+          aws cloudfront create-invalidation\
+          --distribution-id "${{secrets.cloud_distribution_id}}"\
+          --invalidation-batch '{
+            "Paths":{
+              "Quantity": 1,
+              "Items":["/*"]
+            },
+              "CallerReference":"'$(date +%s)'"
+          }'
