--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Invalidate CloudFront Cache (Via AWS CLI)
         run: |
           aws cloudfront create-invalidation-for-distribution-tenant\
-          --distribution-id "${{secrets.cloud_distribution_id}}"\
+          --distribution-id ${{secrets.cloud_distribution_id}}\
           --invalidation-batch '{
             "Paths":{
               "Quantity": 1,
