added terraform plan in destroy-remote-backend.yml file

--- a/.github/workflows/destroy-remote-backend.yml
+++ b/.github/workflows/destroy-remote-backend.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Terraform Init -reconfigure
         run: terraform init -reconfigure
 
+      - name: Terraform Plan
+        run: terraform plan
+
       - name: Terraform Import S3 Bucket
         run: terraform import aws_s3_bucket.tf_state_bucket dummy-tfstate-bucket
 
