--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -11,7 +11,7 @@ on:
 #      - "main"
 jobs:
   build:
-    if: ${{github.events.workflow_run.conclusion == 'success'}}
+    if: ${{github.event.workflow_run.conclusion == 'success'}}
     name: Build Angular App
     runs-on: ubuntu-latest
     defaults:
