--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -2,13 +2,16 @@ name: Infrastructure CI Pipeline
 on:
   workflow_run:
     workflows:
-      - "remote-backend"
+      - "Remote-Backend for Terraform State"
     types:
       - completed
     
 jobs:
   terraform:
-    if: ${{github.event.workflow_run.conclusion == 'success'}}
+    if: >
+      github.event.workflow_run.conclusion == 'success' &&
+      github.event.workflow_run.head_branch == 'main'
+
     name: Apply Terraform Templates
     runs-on: ubuntu-latest
     defaults:
