--- a/.github/workflows/destroy-infrastructure.yml
+++ b/.github/workflows/destroy-infrastructure.yml
@@ -20,8 +20,9 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{secrets.tf_aws_access_key_id}}
-          aws-secret-access-key: ${{secrets.tf_aws_secret_access_key}}
+          #aws-access-key-id: ${{secrets.tf_aws_access_key_id}}
+          #aws-secret-access-key: ${{secrets.tf_aws_secret_access_key}}
+          role-to-assume: arn:aws:iam::578160920339:role/github-actions-oidc-role
           aws-region: ${{secrets.aws_region}}
 
       - name: Terraform Init
