--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -46,8 +46,9 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{secrets.aws_access_key_id}}
-          aws-secret-access-key: ${{secrets.aws_secret_access_key}}
+          #aws-access-key-id: ${{secrets.aws_access_key_id}}
+          #aws-secret-access-key: ${{secrets.aws_secret_access_key}}
+          role-to-assume: arn:aws:iam::578160920339:role/github-actions-oidc-role
           aws-region: ${{secrets.aws_region}}
 
       - name: Sync to S3
