Have added id-token:write in all the CI/CD Pipeline yml files

--- a/.github/workflows/destroy-infrastructure.yml
+++ b/.github/workflows/destroy-infrastructure.yml
@@ -5,6 +5,9 @@ jobs:
   destroy:
     name: Destroy Terraform infrastructure
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     defaults:
       run:
         working-directory: TerraFormTemplate
