--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -16,6 +16,9 @@ jobs:
       github.event.workflow_run.head_branch == 'main'
     name: Build Angular App
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     defaults:
       run:
         working-directory: DummyUI
