--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -17,6 +17,9 @@ jobs:
     defaults:
       run:
         working-directory: TerraFormTemplate
+    permissions:
+      id-token: write
+      contents: read
 
     steps:
       - name: Checkout Code
