created a new role for Angular CI/CD Pipeline. Made neccessary changes in outputs.tf, infrastructure.yml and frontend.yml files

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -52,7 +52,8 @@ jobs:
         with:
           #aws-access-key-id: ${{secrets.aws_access_key_id}}
           #aws-secret-access-key: ${{secrets.aws_secret_access_key}}
-          role-to-assume: arn:aws:iam::578160920339:role/github-actions-oidc-role
+          #role-to-assume: arn:aws:iam::578160920339:role/github-actions-oidc-role
+          role-to-assume: ${{secrets.ANGULAR_CICD_USER_ROLE}}
           aws-region: ${{secrets.aws_region}}
 
       - name: Sync to S3
