--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -23,7 +23,7 @@ jobs:
         working-directory: AnsibleBastionRDS
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@3
+        uses: actions/checkout@v4
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
