--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -32,6 +32,7 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION}}
 
       - name: Get Bastion Host IP and Password
+        shell: bash
         env:
           BASTION_HOST_IP: ${{ github.event.workflow_run.outputs.bastion_host_ip }}
           BASTION_PASSWORD: ${{ github.event.workflow_run.outputs.password }}
@@ -40,7 +41,8 @@ jobs:
           echo "Password: [REDACTED]"
           # Generate inventory.ini for Ansible
           echo "[windows]" > inventory.ini
-          echo "$BASTION_HOST_IP" >> inventory.ini 
+          echo "$BASTION_HOST_IP" >> inventory.ini
+          echo "[windows:vars]" >> inventory.ini
           echo "ansible_user=Administrator" >> inventory.ini 
           echo "ansible_password=$BASTION_PASSWORD" >> inventory.ini
           echo "ansible_connection=winrm" >> inventory.ini 
