have updated the SG inbound rules of an EC2 Instance to test and have updated ansible.yml to work on workflow_dispatch

--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -1,10 +1,12 @@
 name: Ansible CI Pipeline
 on:
-  workflow_run:
-    workflows:
-      - "Infrastructure CI Pipeline"
-    types:
-        - completed
+  workflow_dispatch:
+    
+  #workflow_run:
+    #workflows:
+    #  - "Infrastructure CI Pipeline"
+    #types:
+    #    - completed
 permissions:
         id-token: write
         contents: read
