--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -7,9 +7,9 @@ permissions:
 
 jobs:
   build:
-    if: >
-      github.event.workflow_run.conclusion == 'success' &&
-      github.event.workflow_run.head_branch == 'main'
+  #  if: >
+  #    github.event.workflow_run.conclusion == 'success' &&
+  #    github.event.workflow_run.head_branch == 'main'
 
     name: Run Ansible Playbooks
     runs-on: ubuntu-latest
